@@ -14,10 +14,9 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.time.ZoneId;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Service
 public class ScreeningService {
@@ -151,44 +150,6 @@ public class ScreeningService {
 
 
     public TerminDTOFormWithFilmsDTOFormPlus getTerminWithFilmsPlusByTerminId(Long tnr) {
-//        // Fetch Termin
-//        Termin termin = terminRepository.findById(tnr)
-//                .orElseThrow(() -> new RuntimeException("Termin not found"));
-//
-//        // Get all connections with films
-//        List<Terminverknuepfung> connections = terminverknuepfungRepository.findWithFilmsByTnr(tnr);
-//
-//        // Map to DTOs with connection info
-//        List<FilmDTOFormPlus> filmDTOs = connections.stream()
-//                .filter(tv -> tv.getFilm() != null)
-//                .sorted(
-//                        // Primary sort: vorfilm == false/null first
-//                        Comparator.comparing(
-//                                        (Terminverknuepfung tv) -> {
-//                                            Boolean vorfilm = tv.getVorfilm();
-//                                            return vorfilm != null && vorfilm; // true means it's in the second group
-//                                        },
-//                                        Comparator.nullsFirst(Comparator.naturalOrder())
-//                                )
-//                                // Secondary sort: rang ascending within groups
-//                                .thenComparing(
-//                                        tv -> tv.getRang(),
-//                                        Comparator.nullsFirst(Short::compare)
-//                                )
-//                )
-//                .map(tv -> new FilmDTOFormPlus(
-//                        new FilmDTOForm(tv.getFilm()),
-//                        tv.getVorfilm(),
-//                        tv.getRang()
-//                ))
-//                .toList();
-//
-//
-//        return new TerminDTOFormWithFilmsDTOFormPlus(
-//                new TerminDTOForm(termin),
-//                filmDTOs
-//        );
-
         // Fetch Termin
         Termin termin = terminRepository.findById(tnr)
                 .orElseThrow(() -> new RuntimeException("Termin not found"));
@@ -217,21 +178,28 @@ public class ScreeningService {
                 .map(this::convertToFilmDTO)
                 .toList();
 
+        int terminGesamtlaufzeit = Stream.concat(mainFilms.stream(), vorfilms.stream())
+                .map(f -> f.getFilm().getLaufzeit())  // Extract laufzeit (could be null)
+                .filter(Objects::nonNull)             // Ignore null values
+                .mapToInt(Integer::intValue)          // Convert to primitive int
+                .sum();                               // Sum remaining values
+
         return new TerminDTOFormWithFilmsDTOFormPlus(
                 new TerminDTOForm(termin),
                 mainFilms,
-                vorfilms
+                vorfilms,
+                terminGesamtlaufzeit
         );
     }
 
         // ***** utils method *****
-        private FilmDTOFormPlus convertToFilmDTO(Terminverknuepfung tv) {
-            return new FilmDTOFormPlus(
-                    new FilmDTOForm(tv.getFilm()),
-                    tv.getVorfilm(),
-                    tv.getRang()
-            );
-        }
+            private FilmDTOFormPlus convertToFilmDTO(Terminverknuepfung tv) {
+                return new FilmDTOFormPlus(
+                        new FilmDTOForm(tv.getFilm()),
+                        tv.getVorfilm(),
+                        tv.getRang()
+                );
+            }
 
     public List<TerminDTOWithFilmDTOOverviewArchive> getPastTermineWithFilms() {
         LocalDateTime now = LocalDateTime.now(ZoneId.of("Europe/Berlin"));
@@ -256,44 +224,62 @@ public class ScreeningService {
                 .collect(Collectors.toList()); // Convert stream to List
     }
 
-
     public List<TerminDTOWithFilmDTOOverviewSemester> getTermineByCurrentSemester() {
 
         LocalDateTime now = LocalDateTime.now(ZoneId.of("Europe/Berlin"));
-        LocalDateTime startDateSummer = LocalDateTime.of(now.getYear(), 4, 1, 0, 0);
-        LocalDateTime endDateSummer = LocalDateTime.of(now.getYear(), 9, 30, 23, 59, 59);
-        LocalDateTime startDateWinter = LocalDateTime.of(now.getYear(), 10, 1, 0, 0);
-        LocalDateTime endDateWinter = LocalDateTime.of(now.getYear() + 1, 3, 31, 23, 59, 59);
 
-        // Adjust year for winter end date if current date is in Jan-Mar
-        if (now.getMonthValue() >= 1 && now.getMonthValue() <= 3) {
-            startDateWinter = LocalDateTime.of(now.getYear() - 1, 10, 1, 0, 0);
-            endDateWinter = LocalDateTime.of(now.getYear(), 3, 31, 23, 59, 59);
-        } else if (now.getMonthValue() >= 10) {
-            endDateWinter = LocalDateTime.of(now.getYear() + 1, 3, 31, 23, 59, 59);
-        }
+        boolean isWinter = now.getMonthValue() >= 10 || now.getMonthValue() <= 3;
+
+        LocalDateTime startDate = isWinter
+                ? (now.getMonthValue() <= 3
+                    ? LocalDateTime.of(now.getYear() - 1, 10, 1, 0, 0)
+                    : LocalDateTime.of(now.getYear(), 10, 1, 0, 0))
+                : LocalDateTime.of(now.getYear(), 4, 1, 0, 0);
+
+        LocalDateTime endDate = isWinter
+                ? LocalDateTime.of(now.getMonthValue() <= 3 ? now.getYear() : now.getYear() + 1, 3, 31, 23, 59, 59)
+                : LocalDateTime.of(now.getYear(), 9, 30, 23, 59, 59);
 
         List<Termin> termineInSemester = terminRepository.findTermineByCurrentSemester(
-                now, startDateSummer, endDateSummer, startDateWinter, endDateWinter
+                now, startDate, endDate, startDate, endDate
         );
+
+        // +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
         List<Long> terminIds = termineInSemester.stream()
                 .map(Termin::getTnr)
                 .collect(Collectors.toList());
 
-        List<Terminverknuepfung> connections = terminverknuepfungRepository
-                .findWithFilmsByTerminIds(terminIds);
+        Map<Long, List<Terminverknuepfung>> connectionsByTerminId = terminverknuepfungRepository
+                .findWithFilmsByTerminIds(terminIds)
+                .stream()
+                .collect(Collectors.groupingBy(tv -> tv.getTermin().getTnr()));
 
         return termineInSemester.stream()
                 .map(termin -> {
-                    List<Film> films = connections.stream()
-                            .filter(tv -> tv.getTermin().getTnr().equals(termin.getTnr()))
-                            .filter(tv -> tv.getVorfilm() == null || !tv.getVorfilm())
-                            .map(Terminverknuepfung::getFilm)
-                            .collect(Collectors.toList());
-                    return new TerminDTOWithFilmDTOOverviewSemester(termin, films);
+                    List<Terminverknuepfung> connections = connectionsByTerminId.getOrDefault(termin.getTnr(), List.of());
+
+                    List<Film> films = new ArrayList<>();
+                    List<Film> vorfilms = new ArrayList<>();
+
+                    for (Terminverknuepfung tv : connections) {
+                        if (Boolean.TRUE.equals(tv.getVorfilm())) {
+                            vorfilms.add(tv.getFilm());
+                        } else {
+                            films.add(tv.getFilm());
+                        }
+                    }
+
+                    int screeningTotalDuration = Stream.concat(films.stream(), vorfilms.stream())
+                            .map(Film::getLaufzeit)
+                            .filter(Objects::nonNull)
+                            .mapToInt(Integer::intValue)
+                            .sum();
+
+                    return new TerminDTOWithFilmDTOOverviewSemester(termin, films, screeningTotalDuration);
+//                    return new TerminDTOWithFilmDTOOverviewSemester(termin, films, vorfilms, screeningTotalDuration);
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
